# polish-nl-qa

./: .gitignore  00-EnvironmentCheck.ipynb  01-BaseQuestionAnswering.ipynb  01-SentenceSimilarity.ipynb  02-ElasticSearch.ipynb  03-QuestionAnswering.ipynb  04-FineTunningModel.ipynb  05-Evaluation.ipynb  06-LoadingDocumentsToVectoreStore.ipynb  07-RAG.ipynb  Makefile  RAGAS_V2_IMPROVEMENTS.md  RAGAS_V2_REEVALUATION_GUIDE.md  README.md  check_retriever_passages.py  docker-compose.yml  fix_gpt_answers.py  generate_gpt_manual_eval.py  pyproject.toml  regenerate_gpt_files.py  regenerate_gpt_manual_eval.py  requirements.txt  show_q2.py  show_question_10_passages.py  test_gpt_cache.py  viewer.py
.ipynb_checkpoints/: local-llm-run-checkpoint.ipynb
elasticsearch/: basic_index.json  morfologik.json  morfologik_index.json  morfologik_stopwords.json  morfologik_stopwords_index.json  morfologik_whitespace.json  morfologik_whitespace_index.json  polish_index.json  polish_stopwords.json  polish_stopwords_index.json  polish_whitespace.json  polish_whitespace_index.json
src/: clear_cache.py  generate_training_dataset.py  get_openai_batches.py  get_openai_generator_batches.py  get_openai_generator_batches_curated.py  load_curated_batch_results.py  load_es_data.py  load_openai_data.py  load_openai_generator_batches.py  load_qdrant_data.py  main.py
src/cache/: cache.py
src/common/: dataset_entry.py  document.py  entity_id.py  es_data_importer.py  models_dimensions.py  names.py  passage.py  passage_factory.py  passage_metadata.py  qdrant_data_importer.py  result.py  stopwords.py  (+2 more)
(+43 files in other folders)
