[tool.poetry]
name = "polish-nl-qa"
version = "0.1.0"
description = ""
authors = ["JKusio <jakubkusiowski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyterlab = "^4.1.2"
notebook = "^7.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
